--- a/Emploisdutemps/nbproject/project.properties
+++ b/Emploisdutemps/nbproject/project.properties
@@ -28,7 +28,7 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Emploisdutemps.jar
+dist.jar=${dist.dir}/projet.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jsch-0.1.51.jar=lib\\jsch-0.1.51.jar
@@ -66,7 +66,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Vue.Consulter
+main.class=Vue.Connexion
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
